--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "firebase": "^9.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-redux-firebase": "^3.11.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-firestore": "^0.15.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
